--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 <title>Raspadinha Digital Premium</title>
 <style>
   body { display:flex; justify-content:center; align-items:center; height:100vh; background:#f0f0f0; margin:0; font-family:sans-serif; }
-  #container { position:relative; width:500px; height:250px; }
+  #container { position:relative; width:1000px; height:500px; }
   canvas { border-radius:20px; touch-action: none; position:absolute; top:0; left:0; }
   #message {
     position:absolute;
     top:0; left:0;
-    width:500px; height:250px;
+    width:1000px; height:500px;
     display:flex;
     justify-content:center;
     align-items:center;
-    font-size:36px;
+    font-size:42px;
     font-weight:bold;
     color:#333;
     background:linear-gradient(135deg,#fff8e1,#ffe0b2);
@@ -28,9 +28,9 @@
 </head>
 <body>
 <div id="container">
-  <div id="message">Vale 1000€ para um sofá 🛋️</div>
-  <canvas id="scratch" width="500" height="250"></canvas>
-  <canvas id="confetti" width="500" height="250"></canvas>
+  <div id="message">Vale um sofá 😎😏🛋️</div>
+  <canvas id="scratch" width="1000" height="500"></canvas>
+  <canvas id="confetti" width="1000" height="500"></canvas>
 </div>
 
 <script>
@@ -115,3 +115,4 @@ function animateConfetti(){
 </script>
 </body>
 </html>
+
